# info-radar

./: .gitignore  ANTI_DRIFT.md  ARCHITECTURE.md  BACKLOG.md  GIT_WORKFLOW.md  LICENSE  RATING_SPEC.md  README.md  ROADMAP.md  ROLES.md  SELF_EVOLUTION.md  SOURCES_SEED.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  digest.yml  release.yml
config/: feeds.yaml  rater.yaml  settings.yaml  user_interests.yaml
config/templates/: digest_section.j2  dingtalk_md.j2  feishu_card.j2  weekly_digest.j2
data/: translate_cache.json
docs/: CONTRIBUTING.md  DATA_MODEL.md  DESIGN.md  REQUIREMENTS.md  UAT.md
infodigest/: __init__.py  cli.py  config.py
infodigest/collector/: __init__.py  dedup.py  fetcher.py  normalizer.py  parser.py
infodigest/delivery/: __init__.py  base.py  dingtalk.py  failed_digests.py  feishu.py  limiter.py
infodigest/formatter/: __init__.py  builder.py  translator.py
infodigest/rater/: __init__.py  curator.py  event_history.py  scorer.py
infodigest/scheduler/: __init__.py  runner.py
infodigest/storage/: __init__.py  models.py  repo.py
scripts/: opml_import.py
tests/: conftest.py  test_cli.py  test_curator.py  test_dedup.py  test_dingtalk.py  test_event_history.py  test_failed_digests.py  test_feishu.py  test_fetcher.py  test_formatter.py  test_limiter.py  test_normalizer.py  test_opml_import.py  test_parser.py  test_regression.py  test_repo.py  test_runner.py  test_scorer.py
tests/fixtures/: atom_sample.xml  bad_feed.xml  regression_entries.py  rss2_sample.xml
